--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 author:
   name             : "Zhiyuan Dang"
   avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
+  bio              : "ph.D"
   location         : "Xidian University"
   employer         :
   googlescholar    : "http://yourfullgooglescholarurl.com"
