--- a/_config.yml
+++ b/_config.yml
@@ -80,8 +80,8 @@ analytics:
 author:
   name             : "Zhiyuan Dang"
   avatar           : "profile.png"
-  bio              : "ph.D"
-  location         : "Xidian University"
+  bio              : "ph.D in Xidian University"
+  location         : "Xi'an, China"
   employer         :
   googlescholar    : "http://yourfullgooglescholarurl.com"
   email            : "zhiyuandang@gmail.com"
