--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ author:
   name             : "Zhiyuan Dang"
   avatar           : "profile.png"
   bio              : "ph.D in Xidian University"
-  location         : "Xi'an, China"
+  location         : "xi'an, China"
   employer         :
   googlescholar    : "http://yourfullgooglescholarurl.com"
   email            : "zhiyuandang@gmail.com"
