--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ analytics:
 # Site Author
 author:
   name             : "Zhiyuan Dang"
-  avatar           : "profile.png"
+  avatar           : "IMG_3275.JPG"
   bio              : "ph.D in Xidian University"
   location         : "xi'an, China"
   employer         :
