--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 author:
   name             : "Zhiyuan Dang"
   avatar           : "IMG_3275.JPG"
-  bio              : "ph.D in Xidian University"
+  bio              : "Ph.D in Xidian University"
   location         : "xi'an, China"
   employer         :
   googlescholar    : "http://yourfullgooglescholarurl.com"
