--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   bio              : "Ph.D in Xidian University"
   location         : "xi'an, China"
   employer         :
-  googlescholar    : "http://yourfullgooglescholarurl.com"
+  googlescholar    : ""
   email            : "zhiyuandang@gmail.com"
   uri              :
   bitbucket        :
