--- a/_config.yml
+++ b/_config.yml
@@ -92,7 +92,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : ""
+  github           : "ZhiyuanDang.github.io"
   google_plus      :
   keybase          :
   instagram        :
